force-app/main/default/objects/KnoxEmail__c/KnoxEmail__c.object-meta.xml
<CustomObject>
    <label>Knox Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KnoxEmail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>