force-app/main/default/objects/KnoxEmail__c/fields/BccAddress__c.field-meta.xml
<CustomField>
    <fullName>BccAddress__c</fullName>
    <label>Bcc Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>