force-app/main/default/objects/KnoxEmail__c/fields/MailId__c.field-meta.xml
<CustomField>
    <fullName>MailId__c</fullName>
    <label>Mail Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>