force-app/main/default/objects/KnoxEmail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Knox Email</relationshipLabel>
    <relationshipName>KnoxEmail</relationshipName>
    <type>Lookup</type>
</CustomField>