force-app/main/default/objects/KnoxEmail__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>KnoxEmail</relationshipLabel>
    <relationshipName>KnoxEmail</relationshipName>
    <type>Lookup</type>
</CustomField>