force-app/main/default/objects/KnoxEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sender__c</columns>
    <columns>ToAddress__c</columns>
    <columns>BccAddress__c</columns>
    <columns>CcAddress__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>